--- a/package.json
+++ b/package.json
@@ -1,23 +1,42 @@
 {
+  "author": "Vladimir Grinenko",
   "name": "bem-project-stub-he",
   "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/tadatuta/bem-project-stub-he.git"
   },
-  "engines": {
-    "node": "0.6 | 0.8 | 0.10"
-  },
-  "dependencies": {
-    "bem" : "0.7.6",
-    "bem-environ" : "1.3.1",
-    "html2bemjson" : "1.0.0"
-  },
-  "devDependencies": {},
-  "author": "Vladimir Grinenko",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tadatuta/bem-project-stub-he/issues"
+  },
+  "engines": {
+    "node": ">=0.10"
+  },
+  "dependencies": {
+    "bem-environ": "~1.4.0"
+  },
+  "devDependencies": {
+    "bem": "0.9.0",
+    "bem-tools-autoprefixer": "0.0.3",
+    "borschik": "^1.3.0",
+    "borschik-tech-cleancss": "^1.0.0",
+    "bower": "^1.3.9",
+    "bower-npm-install": "~0.5.4",
+    "enb": "^0.13.7",
+    "enb-bem": "0.1.0-beta2",
+    "enb-autoprefixer": "^0.1.1",
+    "enb-bemxjst": "^1.3.2",
+    "enb-borschik": "^1.1.1",
+    "enb-diverse-js": "^0.1.0",
+    "enb-modules": "^0.2.0",
+    "enb-stylus": "1.1.2",
+    "stylus": "^0.47.1",
+    "ym": "^0.1.0",
+    "html2bemjson" : "1.0.1"
+  },
+  "scripts": {
+    "postinstall": "bower-npm-install",
+    "deps": "bower-npm-install --non-interactive"
   },
   "private": true
 }
