--- a/package.json
+++ b/package.json
@@ -13,28 +13,30 @@
     "node": ">=0.10"
   },
   "dependencies": {
-    "bem-environ": "~1.4.0"
+    "bem-environ": "~1.4.0",
+    "bower": "^1.3.12",
+    "bower-npm-install": "^0.5.9"
   },
   "devDependencies": {
-    "bem": "0.9.0",
+    "bem": "^0.9.0",
     "bem-tools-autoprefixer": "0.0.3",
-    "borschik": "^1.3.0",
-    "borschik-tech-cleancss": "^1.0.0",
-    "bower": "^1.3.9",
-    "bower-npm-install": "~0.5.4",
-    "enb": "^0.13.7",
-    "enb-bem": "0.1.0-beta2",
-    "enb-autoprefixer": "^0.1.1",
-    "enb-bemxjst": "^1.3.2",
-    "enb-borschik": "^1.1.1",
+    "borschik": "^1.3.2",
+    "borschik-tech-cleancss": "^1.0.3",
+    "enb": "^0.13.15",
+    "enb-autoprefixer": "^0.2.2",
+    "enb-bem-techs": "^1.0.3",
+    "enb-bemxjst": "^1.3.4",
+    "enb-borschik": "^1.4.0",
     "enb-diverse-js": "^0.1.0",
+    "enb-html-to-bemjson": "^0.1.0",
     "enb-modules": "^0.2.0",
-    "enb-stylus": "1.1.2",
-    "stylus": "^0.47.1",
-    "ym": "^0.1.0",
-    "html2bemjson" : "1.0.1"
+    "enb-stylus": "^1.2.0",
+    "html2bemjson": "^1.1.0",
+    "stylus": "^0.47.3",
+    "ym": "^0.1.0"
   },
   "scripts": {
+    "start": "enb server",
     "postinstall": "bower-npm-install",
     "deps": "bower-npm-install --non-interactive"
   },
