--- a/package.json
+++ b/package.json
@@ -14,31 +14,26 @@
   },
   "dependencies": {
     "bem-environ": "~1.4.0",
-    "bower": "^1.4.1",
-    "bower-npm-install": "^0.5.9"
+    "bower": "^1.4.1"
   },
   "devDependencies": {
     "bem": "^0.10.0",
-    "bem-tools-autoprefixer": "0.0.3",
-    "borschik": "^1.3.2",
+    "borschik": "^1.4.1",
     "borschik-tech-cleancss": "^2.0.1",
-    "enb": "^0.16.0",
-    "enb-autoprefixer": "^0.3.0",
-    "enb-bem-techs": "2.0.0-rc",
-    "enb-bemxjst": "^1.3.5",
-    "enb-borschik": "^1.5.1",
+    "enb": "^0.17.2",
+    "enb-bem-techs": "^2.0.0",
+    "enb-bemxjst": "^v2.0.0-rc",
+    "enb-borschik": "v2.0.0-beta1",
     "enb-diverse-js": "^0.1.0",
     "enb-html-to-bemjson": "^0.1.0",
     "enb-modules": "^0.2.0",
-    "enb-stylus": "^1.2.3",
-    "html2bemjson": "^1.6.1",
-    "stylus": "^0.52.0",
-    "ym": "^0.1.0"
+    "enb-stylus": "^2.0.0",
+    "ym": "^0.1.2"
   },
   "scripts": {
     "start": "enb server",
     "postinstall": "npm run deps",
-    "deps": "bower-npm-install"
+    "deps": "bower i"
   },
   "private": true
 }
